--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -26,7 +26,7 @@
       <p>Quiero ser <strong>{{user.want_to}}</strong></p>
       <p>De chico quise ser <strong>{{user.wanted_to}}</strong> pd:sigo queriendo ser</p>
       <br><br><br>
-      <p id="resume-go"><strong>Mira un resumen aquí: <span [routerLink]="['/resume']">F</span></strong></p>
+      <p id="resume-go"><strong>contactame: <span [routerLink]="['/contacts']">AQUI</span></strong></p>
     </div>
 
 
