--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,9 +1,8 @@
 <div class="loading" *ngIf="!posts">
-  <img src="https://res.cloudinary.com/escnil994/image/upload/v1604773839/angular/My_Post_6_inxozk.gif"
-       alt="Cargando..">
-  <br>
-  <img id="loader" src="https://res.cloudinary.com/escnil994/image/upload/v1604000960/angular/ZZ5H_cpsehd.gif"
-       alt="Cargando...">
+  <div class="spinner-grow" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  
 </div>
 <div class="loading" *ngIf="posts && posts.length == 0">
   <h3>No hay Ningun proyecto por el momento, pero puedes empezar a crear</h3>
